# REILLY

./: .gitignore  .gitmodules  LICENSE  README.md  __init__.py  demo.py  main.py  pytest.ini  requirements.txt  setup.py  tm_main.py
agents/: montecarlo.py
reilly/backend/: CMakeLists.txt
reilly/backend/include/: backend.hpp
reilly/backend/include/agents/: agent.hpp  agent.ipp
reilly/backend/include/agents/approximate/: approximate_agent.hpp  approximate_agent.ipp  tile_coding.hpp  tile_coding.ipp
reilly/backend/include/agents/approximate/montecarlo/: semigradient_montecarlo.hpp  semigradient_montecarlo.ipp
reilly/backend/include/agents/approximate/n_step/: approximate_n_step.hpp  approximate_n_step.ipp  semigradient_n_step_expected_sarsa.hpp  semigradient_n_step_expected_sarsa.ipp  semigradient_n_step_sarsa.hpp  semigradient_n_step_sarsa.ipp
reilly/backend/include/agents/approximate/temporal_difference/: approximate_temporal_difference.hpp  approximate_temporal_difference.ipp  semigradient_expected_sarsa.hpp  semigradient_expected_sarsa.ipp  semigradient_sarsa.hpp  semigradient_sarsa.ipp
reilly/backend/include/agents/bandit/: bandit_arms.hpp  bandit_arms.ipp  greedy_bandit.hpp  greedy_bandit.ipp  multi_armed_bandit.hpp  multi_armed_bandit.ipp  thompson_sampling_bandit.hpp  thompson_sampling_bandit.ipp  ucb_bandit.hpp  ucb_bandit.ipp
reilly/backend/include/agents/tabular/: tabular_agent.hpp  tabular_agent.ipp
reilly/backend/include/agents/tabular/montecarlo/: every_visit.hpp  every_visit.ipp  first_visit.hpp  first_visit.ipp  montecarlo.hpp  montecarlo.ipp
reilly/backend/include/agents/tabular/n_step/: n_step.hpp  n_step.ipp  n_step_expected_sarsa.hpp  n_step_expected_sarsa.ipp  n_step_sarsa.hpp  n_step_sarsa.ipp  n_step_tree_backup.hpp  n_step_tree_backup.ipp
reilly/backend/include/agents/tabular/planning/: prioritized_sweeping.hpp  prioritized_sweeping.ipp  q_planning.hpp  q_planning.ipp  tabular_dyna_q.hpp  tabular_dyna_q.ipp  tabular_dyna_q_plus.hpp  tabular_dyna_q_plus.ipp
reilly/backend/include/agents/tabular/temporal_difference/: expected_sarsa.hpp  expected_sarsa.ipp  q_learning.hpp  q_learning.ipp  sarsa.hpp  sarsa.ipp  temporal_difference.hpp  temporal_difference.ipp
reilly/backend/src/: backend.cpp  virtual_overrides.ipp
reinforcement_learning/backend/: CMakeLists.txt  __init__.py
reinforcement_learning/backend/include/: backend.hpp
reinforcement_learning/backend/include/agents/: agent.hpp  agent.ipp
reinforcement_learning/backend/include/agents/approximate/: approximate_agent.hpp  approximate_agent.ipp  tile_coding.hpp  tile_coding.ipp
reinforcement_learning/backend/include/agents/approximate/montecarlo/: semigradient_montecarlo.hpp
reinforcement_learning/backend/include/agents/approximate/n_step/: approximate_n_step.hpp  approximate_n_step.ipp  semigradient_n_step_expected_sarsa.hpp  semigradient_n_step_expected_sarsa.ipp  semigradient_n_step_sarsa.ipp
reinforcement_learning/backend/include/agents/approximate/temporal_difference/: approximate_temporal_difference.ipp  expected_sarsa.hpp  expected_sarsa.ipp  sarsa.hpp  sarsa.ipp  semigradient_expected_sarsa.hpp  semigradient_expected_sarsa.ipp  semigradient_sarsa.hpp  temporal_difference.hpp  temporal_difference.ipp
reinforcement_learning/backend/include/agents/tabular/: tabular_agent.hpp  tabular_agent.ipp
reinforcement_learning/backend/include/agents/tabular/montecarlo/: every_visit.hpp  every_visit.ipp  first_visit.hpp  first_visit.ipp  montecarlo.hpp  montecarlo.ipp
reinforcement_learning/backend/include/agents/tabular/n_step/: n_step.hpp  n_step.ipp  n_step_expected_sarsa.hpp  n_step_tree_backup.hpp
reinforcement_learning/backend/include/agents/tabular/planning/: q_planning.hpp  q_planning.ipp  tabular_dyna_q.hpp  tabular_dyna_q.ipp  tabular_dyna_q_plus.ipp
reinforcement_learning/backend/include/agents/tabular/temporal_difference/: expected_sarsa.hpp  expected_sarsa.ipp  q_learning.hpp  q_learning.ipp  sarsa.hpp  sarsa.ipp  temporal_difference.hpp  temporal_difference.ipp
reinforcement_learning/backend/src/: CMakeLists.txt  backend.cpp  virtual_overrides.ipp
(+196 files in other folders)
