find_package(Python3 COMPONENTS Interpreter NumPy)

pybind11_add_module(backend MODULE backend.cpp)

target_link_libraries(backend PUBLIC pybind11::module Python3::NumPy)

set_target_properties(backend PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}"
                                         SUFFIX "${PYTHON_MODULE_EXTENSION}")
